# raspicat-vla

./: .gitignore  .gitmodules  LICENSE  README.md  raspicat.repos
docker/: Dockerfile.asyncvla  Dockerfile.omnivla  Dockerfile.real  Dockerfile.sim  run.sh
docs/: PAPER.md  USAGE.md
docs/superpowers/notes/: 2026-04-30-asyncvla-deps.md  2026-04-30-omnivla-deps.md
docs/superpowers/plans/: 2026-04-29-asyncvla-mvp-wiring.md  2026-04-29-asyncvla-real-model-integration.md  2026-04-30-omnivla-real-model-integration.md
docs/superpowers/specs/: 2026-04-29-asyncvla-control-node-design.md
scripts/: download_asyncvla_checkpoints.sh  download_omnivla_checkpoints.sh
src/raspicat_async_vla_bringup/: CMakeLists.txt  package.xml
src/raspicat_async_vla_bringup/launch/: mvp_local.launch.py
src/raspicat_async_vla_edge/asyncvla_edge/: edge_node.py  embedding_cache.py  grpc_client.py  path_follower_node.py
src/raspicat_async_vla_edge/launch/: path_follower.launch.py
src/raspicat_async_vla_edge/test/: test_embedding_cache.py  test_grpc_client.py  test_pure_pursuit.py
src/raspicat_async_vla_msgs/: CMakeLists.txt  package.xml
src/raspicat_async_vla_msgs/action/: NavigateAsync.action
src/raspicat_async_vla_msgs/srv/: SetGoal.srv
src/raspicat_async_vla_proto/raspicat_async_vla_proto/: conversions.py
src/raspicat_async_vla_proto/test/: test_conversions.py
src/raspicat_async_vla_remote/: package.xml  setup.cfg  setup.py
src/raspicat_async_vla_remote/asyncvla_remote/: dummy_server.py  server_main.py
src/raspicat_async_vla_remote/test/: test_dummy_server.py
src/raspicat_vla_bringup/: package.xml
src/raspicat_vla_bringup/launch/: mvp_asyncvla.launch.py  mvp_omnivla.launch.py  mvp_sim.launch.py
src/raspicat_vla_edge/: setup.py
src/raspicat_vla_edge/config/: edge_params.yaml
src/raspicat_vla_edge/launch/: edge_only.launch.py
src/raspicat_vla_edge/raspicat_vla_edge/: edge_node.py
src/raspicat_vla_edge/test/: test_omnivla_edge_adapter.py
src/raspicat_vla_proto/raspicat_vla_proto/: conversions.py
src/raspicat_vla_remote/: setup.py
src/raspicat_vla_remote/raspicat_vla_remote/: dummy_server.py  server.py  server_main.py
(+14 files in other folders)
