<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspicat_vla_bringup</name>
  <version>0.1.0</version>
  <description>Launch composition for VLA navigation on raspicat.</description>
  <maintainer email="nop@example.com">nop</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>raspicat_vla_edge</exec_depend>
  <exec_depend>raspicat_vla_remote</exec_depend>

  <!-- The rt-net raspicat sim/real packages (raspicat, raspicat_bringup,
       raspicat_description, raspicat_gazebo, raspicat_navigation,
       raspicat_slam) are required at runtime by the launch files in
       launch/ but are NOT declared as exec_depend here on purpose:
       colcon's CMake build task verifies every exec_depend resolves to an
       installed package.sh under install/, which would force the rt-net
       sources to be co-built with raspicat_vla_bringup even in CI / test
       containers that only need the vla packages. The rt-net packages are
       provided at runtime by the dedicated Docker images (Dockerfile.real
       / Dockerfile.sim build them in /opt/real_ws / /opt/sim_ws) and
       resolved by AMENT_PREFIX_PATH overlay. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
